@@ -7,6 +7,7 @@
  - Fix for bug 28110: User proper SQL statement for updating the transport settings on password transcription
  - Fix for bug 28429: Also consider signaled content length (if available) when checking for a valid image
  - Fix for bug 27413: Enabled to consider X-Forward-Headers to keep the information if a secure connection has been established by client
+ - Fix for bug 27428: Consider deferrer service when generating an OAuth call-back URL
 
 * 2013-08-20 - martin.herfurth@open-xchange.com
 
